namespaces/cms/apps/redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master
  namespace: cms
  labels:
    app: redis
    role: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      role: master
  template:
    metadata:
      labels:
        app: redis
        role: master
    spec:
      containers:
      - name: redis
        image: redis:7.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
          name: redis
        command: ["/bin/sh", "-c"]
        args:
        - exec redis-server --appendonly no --requirepass "$REDIS_PASSWORD"
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
