namespaces/cms/apps/mariadb.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: cms
spec:
  type: ClusterIP
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
  selector:
    app: mariadb
