namespaces/cms/apps/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master
  namespace: cms
spec:
  type: ClusterIP
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
  selector:
    app: redis
    role: master
