namespaces/cms/apps/wordpress.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: cms
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: wordpress
